syntax = "proto3";
option java_multiple_files = true;
package grpc;
//option java_package = "sender";

message TransactionRequest {
  string transactionId = 1;
  string accountId = 2;
}

message TransactionResponse {
  string result = 1;
}

service ReceiveService {
  rpc deduct(TransactionRequest) returns (TransactionResponse);
  rpc refund(TransactionRequest) returns (TransactionResponse);
}
